# quantease-binance

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
binance_history/: __init__.py  api.py  config.py  utils.py
docs/: api.rst  conf.py  example.rst  index.rst  quickstart.rst
example/: download_funding.py  download_future.py  download_future_spot.py  download_perp.py  download_spot.py
quantease_binance/: __init__.py  api.py  config.py  utils.py
tests/: test_api.py  test_utils.py
