[tool.poetry]
name = "quantease-binance"
version = "0.1.0"
description = ""
authors = ["river <shinachuan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.10.6"
httpx = "0.27.2"
pandas = "2.2.3"
pytest = "8.3.3"
python-dateutil = "2.9.0.post0"
tardis-dev = "2.0.0a13"
tqdm = "4.66.5"
uvloop = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
